[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Cueva.gd" type="Script" id=1]
[ext_resource path="res://sounds/sdev_invasion.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/sdev_retirada.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 29.0689

[sub_resource type="CircleShape2D" id=2]
radius = 77.5403

[node name="Cueva" type="Node2D" groups=["cueva"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
collision_layer = 257
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
position = Vector2( 2, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Construccion" type="Area2D" parent="."]
position = Vector2( 4, 0 )
rotation = 1.5708
collision_layer = 0
collision_mask = 161
input_pickable = false
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Construccion"]
position = Vector2( 1, -3.57628e-06 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 22
__meta__ = {
"_edit_lock_": true
}

[node name="Cimientos" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="C1" type="Node2D" parent="Cimientos"]
position = Vector2( -59, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="C2" type="Node2D" parent="Cimientos"]
position = Vector2( 68, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="C3" type="Node2D" parent="Cimientos"]
position = Vector2( -31, -54 )
__meta__ = {
"_edit_lock_": true
}

[node name="C4" type="Node2D" parent="Cimientos"]
position = Vector2( 31, -54 )
__meta__ = {
"_edit_lock_": true
}

[node name="C5" type="Node2D" parent="Cimientos"]
position = Vector2( -29, 52 )
__meta__ = {
"_edit_lock_": true
}

[node name="C6" type="Node2D" parent="Cimientos"]
position = Vector2( 41, 51 )
__meta__ = {
"_edit_lock_": true
}

[node name="Comienza" type="Timer" parent="."]
one_shot = true

[node name="Termina" type="Timer" parent="."]
one_shot = true

[node name="Chekeo" type="Timer" parent="."]
wait_time = 5.0

[node name="SsdevInvasion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SsdevRetirada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="Construccion" to="." method="_on_Construccion_area_entered"]
[connection signal="area_exited" from="Construccion" to="." method="_on_Construccion_area_exited"]
[connection signal="timeout" from="Comienza" to="." method="_on_Comienza_timeout"]
[connection signal="timeout" from="Termina" to="." method="_on_Termina_timeout"]
[connection signal="timeout" from="Chekeo" to="." method="_on_Chekeo_timeout"]
